--- a/Philadelphia_Crime_Data.ipynb
+++ b/Philadelphia_Crime_Data.ipynb
@@ -25,12 +25,12 @@
    "source": [
     "## Data Set Basic Statistics\n",
     "\n",
-    "The investigation begins by gathering basic data about Philadelphia crime statistics.  How many entries are in the data set?  What are the fields and ranges of each field?  What is the format of each field?  Is the formatting consistent?  What cleaning has to be performed on the data set?"
+    "The investigation begins by gathering basic data about Philadelphia crime statistics.  Below, we can see the number of entries in the data set, which is slightly above 2.2 million."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +52,21 @@
     "# Store Philadelphia's crime data\n",
     "crime_data = pd.read_csv('crime.csv')\n",
     "\n",
-    "# Check out the contents\n",
+    "# How large is data set?\n",
     "print(\"Data dimensions: \")\n",
     "print(crime_data.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we are able to see the names of our 14 columns, and get some basic information about them."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +129,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, some data columns are explored, such as police districts, crime codes, and crime descriptions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +222,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, I seen that the date and time entries generally had certain patterns.  This code will tell us if there is any data that does not have the correct pattern which would need cleaning.  Good news - there are no incorrectly formatted date and time entries."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -248,39 +269,187 @@
     "print(\"Dispatch_Date: \", does_column_match_pattern(crime_data, 'Dispatch_Date', date_re))\n",
     "print(\"Dispatch_Time: \", does_column_match_pattern(crime_data, 'Dispatch_Time', time_re))\n",
     "print(\"Hour: \", ((crime_data['Hour'] >= 0) & (crime_data['Hour'] <= 23)).all())\n",
-    "print(\"Month: \", does_column_match_pattern(crime_data, 'Month', '[0-9]{4}-[0-9]{2}'))\n",
-    "\n"
+    "print(\"Month: \", does_column_match_pattern(crime_data, 'Month', '[0-9]{4}-[0-9]{2}'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Normalization\n",
+    "## Data Set Cleaning\n",
     "\n",
-    "The Philadelphia Crime Data set contains over 230K rows where each row represents one 911 call about a criminal incident in the city.  Each row includes information about the date, time, police district, street, and type of incident.  There are some 2016 and 2017 incidents in the data set but there are considerable gaps in the data for those two years.  There are no apparent gaps for 2006 through 2015 so I will include only those years in the investigation.\n",
+    "The Philadelphia Crime Data set contains over 2.2 million rows where each row represents one 911 call about a criminal incident in the city.  Each row includes information about the date, time, police district, street, and type of incident.  There are some 2016 and 2017 incidents in the data set but there are considerable gaps in the data for those two years.  There are no apparent gaps for 2006 through 2015 so I will include only those years in the investigation.  Following this cleaning step, the data set now contains slightly over two million rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data dimensions: \n",
+      "(2035062, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove incidents from 2016 and 2017 since there are large gaps in the data\n",
+    "years_included = ['2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015']\n",
+    "crime_data = crime_data[crime_data['Dispatch_Date_Time'].astype(str).str.startswith(tuple(years_included))]\n",
     "\n",
-    "When I looked at the distinct police districts represented in the dataset, I compared the district numbers to a map of the Philadelphia Police Districts.  There are four districts which no longer exist due to mergers.  The 4th district was merged into the 3rd district.  The 23rd was absored by the 22nd district.  The 77th was absorbed by the 12th district.  Meanwhile, the 92nd district is now part of the 14th district.  The same merger will occur in my data frame.\n",
+    "# How large is data set now?\n",
+    "print(\"Data dimensions: \")\n",
+    "print(crime_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are less than 1000 entries which do not contain a crime classification and corresponding description.  Since I wish to measure the crime type, I will remove these rows from the data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data dimensions: \n",
+      "(2035062, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exclude rows without a crime type or description\n",
+    "crime_data.dropna(subset=['UCR_General', 'Text_General_Code'], inplace = True)\n",
     "\n",
-    "There are less than 1000 entries which do not contain a crime classification and corresponding description.  Since I wish to measure the crime type, I will remove these rows from the data set.\n",
+    "# How large is data set now?\n",
+    "print(\"Data dimensions: \")\n",
+    "print(crime_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When I looked at the distinct police districts represented in the dataset, I compared the district numbers to a map of the Philadelphia Police Districts.  There are four districts which no longer exist due to mergers.  The 4th district was merged into the 3rd district.  The 23rd was absored by the 22nd district.  The 77th was absorbed by the 12th district.  Meanwhile, the 92nd district is now part of the 14th district.  The same merger will occur in my data frame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before district merger:\n",
+      "Dc_Dist\n",
+      "1      44775\n",
+      "2     106155\n",
+      "3      76989\n",
+      "4      29197\n",
+      "5      28582\n",
+      "6      87384\n",
+      "7      40653\n",
+      "8      67759\n",
+      "9      76028\n",
+      "12    121702\n",
+      "14    109950\n",
+      "15    167387\n",
+      "16     66705\n",
+      "17     69817\n",
+      "18     99031\n",
+      "19    124281\n",
+      "22    113371\n",
+      "23     27278\n",
+      "24    146134\n",
+      "25    138099\n",
+      "26     78988\n",
+      "35    119559\n",
+      "39     86675\n",
+      "77      6936\n",
+      "92      1627\n",
+      "Name: Dc_Dist, dtype: int64\n",
+      "\n",
+      "\n",
+      "After district merger:\n",
+      "Dc_Dist\n",
+      "1      44775\n",
+      "2     106155\n",
+      "3     106186\n",
+      "5      28582\n",
+      "6      87384\n",
+      "7      40653\n",
+      "8      67759\n",
+      "9      76028\n",
+      "12    128638\n",
+      "14    111577\n",
+      "15    167387\n",
+      "16     66705\n",
+      "17     69817\n",
+      "18     99031\n",
+      "19    124281\n",
+      "22    140649\n",
+      "24    146134\n",
+      "25    138099\n",
+      "26     78988\n",
+      "35    119559\n",
+      "39     86675\n",
+      "Name: Dc_Dist, dtype: int64\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check before merger\n",
+    "print(\"Before district merger:\")\n",
+    "dc_dist_distinct = crime_data.groupby('Dc_Dist')['Dc_Dist'].count()\n",
+    "print(dc_dist_distinct)\n",
+    "print(\"\\n\")\n",
     "\n",
-    "I checked all corresponding date and time columns to ensure that all values matched the expected pattern.  Below, I will check to make sure the information is consistent.  For example, if the **Dispatch_Date_Time** is '2015-11-23 19:20:00', then the **Dispatch_Date** is '2015-11-23', **Dispatch_Time** is '19:20:00', **Hour** is set to 19, and **Month** is set to '2015-11'. If there is inconsistent data in any row, the contents will be updated to match **Dispatch_Date_Time**.\n",
+    "# Merge districts\n",
+    "crime_data.loc[crime_data.Dc_Dist == 4, 'Dc_Dist'] = 3\n",
+    "crime_data.loc[crime_data.Dc_Dist == 23, 'Dc_Dist'] = 22\n",
+    "crime_data.loc[crime_data.Dc_Dist == 77, 'Dc_Dist'] = 12\n",
+    "crime_data.loc[crime_data.Dc_Dist == 92, 'Dc_Dist'] = 14\n",
     "\n",
-    "The **Location_Block** field is not consistent so there will be some cleaning needed to ensure the same pattern in the data.\n",
-    "\n",
-    "##### TODO: Investigate this further and look at ways to clean this field.\n",
-    "##### TODO: More than one 911 call for same incident; what are criteria for two rows to denote same event?"
+    "# Check the result of the merger\n",
+    "print(\"After district merger:\")\n",
+    "dc_dist_distinct = crime_data.groupby('Dc_Dist')['Dc_Dist'].count()\n",
+    "print(dc_dist_distinct)\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I checked all corresponding date and time columns to ensure that all values matched the expected pattern.  Below, I will check to make sure the information is consistent.  For example, if the **Dispatch_Date_Time** is '2015-11-23 19:20:00', then the **Dispatch_Date** is '2015-11-23', **Dispatch_Time** is '19:20:00', **Hour** is set to 19, and **Month** is set to '2015-11'. If there is inconsistent data in any row, the contents will be updated to match **Dispatch_Date_Time**."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
     "\n",
+    "# TODO: Examine non-matching cases to be sure the code is correct!\n",
+    "# TODO: Faster performance needed!\n",
     "# Assure consistent dates and times in each row\n",
     "def ensure_data_time_consistency(data_frame):\n",
     "    ''' Checks all date/time fields to be sure there is a match\n",
@@ -323,13 +492,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The **Location_Block** field is not consistent so there will be some cleaning needed to ensure the same pattern in the data.\n",
+    "\n",
+    "##### TODO: Investigate this further and look at ways to clean this field.\n",
+    "##### TODO: More than one 911 call for same incident; what are criteria for two rows to denote same event?"
+   ]
   }
  ],
  "metadata": {
