--- a/Philadelphia_Crime_Data.ipynb
+++ b/Philadelphia_Crime_Data.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -434,23 +434,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I checked all corresponding date and time columns to ensure that all values matched the expected pattern.  Below, I will check to make sure the information is consistent.  For example, if the **Dispatch_Date_Time** is '2015-11-23 19:20:00', then the **Dispatch_Date** is '2015-11-23', **Dispatch_Time** is '19:20:00', **Hour** is set to 19, and **Month** is set to '2015-11'. If there is inconsistent data in any row, the contents will be updated to match **Dispatch_Date_Time**."
+    "I checked all corresponding date and time columns to ensure that all values matched the expected pattern.  When I checked all date and time fields to ensure consistency, I noticed that the **Hour** field sometimes does not match the **Dispatch_Date_Time**.  This occurs when the dispatch time is near the top of the hour.  For example, the dispatch date and time could be '2015-11-23 18:59:00'.  The hour may be set to 19.  The code below corrects the hour to 18."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "from datetime import timedelta\n",
     "\n",
-    "# TODO: Examine non-matching cases to be sure the code is correct!\n",
-    "# TODO: Faster performance needed!\n",
-    "# Assure consistent dates and times in each row\n",
     "def ensure_data_time_consistency(data_frame):\n",
     "    ''' Checks all date/time fields to be sure there is a match\n",
     "        Updates the date/time fields if not a match!\n",
@@ -464,29 +458,10 @@
     "        # Get Dispatch_Date_Time\n",
     "        full_date_time = datetime.strptime(tup.Dispatch_Date_Time, \"%Y-%m-%d %H:%M:%S\")\n",
     "        \n",
-    "        # Check Dispatch_Date\n",
-    "        date_only = datetime.strptime(tup.Dispatch_Date, \"%Y-%m-%d\")\n",
-    "        if (date_only.date() - full_date_time.date() > timedelta(seconds = 59)):\n",
-    "            data_frame.loc[this_index, 'Dispatch_Date'] = str(full_date_time.year) + '-' + \\\n",
-    "                                                          str(full_date_time.month) + '-' + \\\n",
-    "                                                          str(full_date_time.day)\n",
-    "        \n",
-    "        # Check Dispatch Time\n",
-    "        time_only = datetime.strptime(tup.Dispatch_Time, \"%H:%M:%S\")\n",
-    "        if (time_only.time() != full_date_time.time()):\n",
-    "            data_frame.loc[this_index, 'Dispatch_Time'] = str(full_date_time.hour) + '-' + \\\n",
-    "                                                          str(full_date_time.minute) + '-' + \\\n",
-    "                                                          str(full_date_time.second)\n",
-    "        \n",
     "        # Check Hour\n",
     "        if (tup.Hour != full_date_time.hour):\n",
     "            data_frame.loc[this_index, 'Hour'] = full_date_time.hour\n",
-    "        \n",
-    "        # Check Month\n",
-    "        month_only = datetime.strptime(tup.Month, \"%Y-%m\")\n",
-    "        if (month_only.year != full_date_time.year or month_only.month != full_date_time.month):\n",
-    "            data_frame.loc[this_index, 'Month'] = str(full_date_time.year) + '-' + str(full_date_time.month)\n",
-    "    \n",
+    "            \n",
     "# Ensure the dates and times match in each row\n",
     "ensure_data_time_consistency(crime_data)"
    ]
@@ -502,6 +477,15 @@
     "##### TODO: Investigate this further and look at ways to clean this field.\n",
     "##### TODO: More than one 911 call for same incident; what are criteria for two rows to denote same event?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
