--- a/Philadelphia_Crime_Data.ipynb
+++ b/Philadelphia_Crime_Data.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -439,12 +439,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
+    "# TODO: Is it possible to apply?  There are two columns involved here!\n",
     "def ensure_data_time_consistency(data_frame):\n",
     "    ''' Checks all date/time fields to be sure there is a match\n",
     "        Updates the date/time fields if not a match!\n",
@@ -472,20 +473,210 @@
     "collapsed": true
    },
    "source": [
-    "The **Location_Block** field is not consistent so there will be some cleaning needed to ensure the same pattern in the data.\n",
-    "\n",
-    "##### TODO: Investigate this further and look at ways to clean this field.\n",
-    "##### TODO: More than one 911 call for same incident; what are criteria for two rows to denote same event?"
+    "The **Location_Block** field is not consistent so there will be some cleaning needed to ensure the same pattern in the data.  The cleanup code will ensure that the locations are specified as either a block or an intersection.  A block is denoted as _2400 BLOCK FRONT STREET_.  An intersection fits the pattern _RHAWN ST / COTTMAN AV_.  The street types are standarized to ensure consistency as much as practical.  For example, all _ROAD_ street types are changed to _RD_."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data dimensions: \n",
+      "(2034110, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Regular expressions\n",
+    "block_re = '^(\\d+)(\\s)BLOCK(\\s)(.+)(\\s)(\\w+)$'\n",
+    "block_missed_re = '^(\\d+)(\\s)(.+)(\\s)(\\w+)$'\n",
+    "block_street_missed_re = '^(\\d+)(.+)$'\n",
+    "street_missed_re = '^(\\d+)(\\s)BLOCK(\\s)(.+)$'\n",
+    "int_amp_re = '^(.+)(\\s)(\\w+)(\\s)&(.+)(\\s)(\\w+)$'\n",
+    "int_slash_re = '^(.+)(\\s)(\\w+)(\\s)(\\/)(.+)(\\s)(\\w+)$'\n",
+    "\n",
+    "# Location formatting function\n",
+    "def format_location_data(item):\n",
+    "    ''' Format data set's location block column (invoked via apply method)\n",
+    "        item = one item from location block column\n",
+    "    '''\n",
+    "    # Initial trimming\n",
+    "    item = item.strip()\n",
+    "    \n",
+    "    # Remove extraneous first characters\n",
+    "    if (item[0] == '`' or item[0] == '/'):\n",
+    "        item = item[1:]\n",
+    "        \n",
+    "    # Remove item with no whitespace\n",
+    "    if (len(item.split()) == 1):\n",
+    "        item = 'None'\n",
+    "    \n",
+    "    # We will not look at establishment, only the street\n",
+    "    if ('@' in item):\n",
+    "        at_index = item.index('@')\n",
+    "        item = item[at_index+1:] # also remove '@'\n",
+    "        item = item.strip()\n",
+    "\n",
+    "    # BLOCK and SLASH patterns accepted at this stage\n",
+    "    if (re.fullmatch(block_re, item) or re.fullmatch(int_slash_re, item)):\n",
+    "        pass\n",
+    "    elif (re.fullmatch(street_missed_re, item)):\n",
+    "        # Add default street type\n",
+    "        item += \" ST\"\n",
+    "    \n",
+    "    elif (re.fullmatch(block_missed_re, item)):\n",
+    "        # Add BLOCK after number\n",
+    "        tokens = item.split()\n",
+    "        item = tokens[0] + \" BLOCK\"\n",
+    "        \n",
+    "        # Reconstruct string\n",
+    "        for i in range(1,len(tokens)):\n",
+    "            item = item + \" \" + tokens[i]\n",
+    "    \n",
+    "    elif (re.fullmatch(block_street_missed_re, item)):\n",
+    "        # Add BLOCK after number\n",
+    "        tokens = item.split()\n",
+    "        item = tokens[0] + \" BLOCK\"\n",
+    "        \n",
+    "        # Reconstruct string\n",
+    "        for i in range(1,len(tokens)):\n",
+    "            item = item + \" \" + tokens[i]\n",
+    "            \n",
+    "        # Add default street type\n",
+    "        item += \" ST\"\n",
+    "    \n",
+    "    elif (re.fullmatch(int_amp_re, item)):\n",
+    "        # Replace ampersand\n",
+    "        item = item.replace(\"&\", \"/\")\n",
+    "    \n",
+    "    return item\n",
+    "\n",
+    "# Street Types\n",
+    "STREET_TYPE_EXPECTED = [\"AV\", \"BLVD\", \"CIR\", \"CT\", \"DR\", \"LN\", \"PKWY\", \"PL\", \"RD\", \"ROW\", \"ST\", \"TER\", \"WAY\"]\n",
+    "\n",
+    "STREET_TYPE_MAPPING = { \"AVE\": \"AV\",\n",
+    "                        \"AVENUE\": \"AV\",\n",
+    "                        \"AVE\": \"AV\",\n",
+    "                        \"BLD\": \"BLVD\",\n",
+    "                        \"BLV\": \"BLVD\",\n",
+    "                        \"BDV\": \"BLVD\",\n",
+    "                        \"BOULEVARD\": \"BLVD\",\n",
+    "                        \"CI\": \"CIR\",\n",
+    "                        \"CIRCLE\": \"CIR\",\n",
+    "                        \"CRT\": \"CT\",\n",
+    "                        \"COURT\": \"CT\",\n",
+    "                        \"DRIVE\": \"DR\",\n",
+    "                        \"LANE\": \"LN\",\n",
+    "                        \"PKY\": \"PKWY\",\n",
+    "                        \"PWY\": \"PKWY\",\n",
+    "                        \"PARKWAY\": \"PKWY\",\n",
+    "                        \"PLA\": \"PL\",\n",
+    "                        \"PLACE\": \"PL\",\n",
+    "                        \"RDS\": \"RD\",\n",
+    "                        \"ROAD\": \"RD\",\n",
+    "                        \"STR\": \"ST\",\n",
+    "                        \"STT\": \"ST\",\n",
+    "                        \"STREET\": \"ST\",\n",
+    "                        \"TRCE\": \"TER\",\n",
+    "                        \"WA\": \"WAY\"\n",
+    "                      }\n",
+    "\n",
+    "# Street Type Formatting function\n",
+    "def format_street_type(item):\n",
+    "    ''' Format street type in data set's location block column (invoked via apply method)\n",
+    "        This function is invoked agter format_location_data\n",
+    "        item = one item from location block column\n",
+    "    ''' \n",
+    "    # BLOCK pattern\n",
+    "    if (re.fullmatch(block_re, item)):\n",
+    "        tokens = item.split()\n",
+    "    \n",
+    "        # Check the hundred block\n",
+    "        if (tokens[0].isdigit()):\n",
+    "            # Check the hundred block\n",
+    "            tokens = item.split()\n",
+    "            block_num = int(tokens[0])\n",
+    "            block_num = (block_num // 100) * 100\n",
+    "            item = str(block_num)\n",
+    "        else:\n",
+    "            item = tokens[0]\n",
+    "            \n",
+    "        # Keep BLOCK and name of street\n",
+    "        item = item + \" \" + tokens[1] + \" \" + tokens[2]\n",
+    "    \n",
+    "        # Check remaining tokens for street type\n",
+    "        for i in range(3, len(tokens)):\n",
+    "            if (tokens[i] in STREET_TYPE_MAPPING):\n",
+    "                item = item + \" \" + STREET_TYPE_MAPPING[tokens[i]]\n",
+    "                break\n",
+    "            elif (tokens[i] in STREET_TYPE_EXPECTED):\n",
+    "                item = item + \" \" + tokens[i]\n",
+    "                break\n",
+    "            else:\n",
+    "                item = item + \" \" + tokens[i]\n",
+    "    \n",
+    "    # SLASH pattern\n",
+    "    elif (re.fullmatch(int_slash_re, item)):\n",
+    "        street_names = item.split('/')\n",
+    "        \n",
+    "        # Go through each part\n",
+    "        this_part = \"\"\n",
+    "        for i in range(0, len(street_names)):\n",
+    "            if (i>0):\n",
+    "                # Previous part\n",
+    "                item = this_part + \" / \"\n",
+    "                this_part = \"\"\n",
+    "            \n",
+    "            # Split this part\n",
+    "            tokens = street_names[i].split()\n",
+    "            \n",
+    "            # Empty item?\n",
+    "            if (len(tokens) > 0):\n",
+    "                break\n",
+    "        \n",
+    "            # Keep first token (for case like STREET RD)\n",
+    "            this_part = this_part + tokens[0]\n",
+    "            \n",
+    "            # Check remaining tokens for street type\n",
+    "            for i in range(1, len(tokens)):\n",
+    "                if (tokens[i] in STREET_TYPE_MAPPING):\n",
+    "                    this_part = this_part + \" \" + STREET_TYPE_MAPPING[tokens[i]]\n",
+    "                    break\n",
+    "                elif (tokens[i] in STREET_TYPE_EXPECTED):\n",
+    "                    this_part = this_part + \" \" + tokens[i]\n",
+    "                    break\n",
+    "                else:\n",
+    "                    this_part = this_part + \" \" + tokens[i]\n",
+    "            \n",
+    "        # Last part\n",
+    "        item = item + this_part\n",
+    "\n",
+    "    return item\n",
+    "\n",
+    "# Standardize the location data\n",
+    "crime_data['Location_Block'] = crime_data['Location_Block'].apply(format_location_data)\n",
+    "\n",
+    "# Dump items with no information\n",
+    "crime_data = crime_data[crime_data['Location_Block'] != 'None']\n",
+    "\n",
+    "# Standardize street type\n",
+    "crime_data['Location_Block'] = crime_data['Location_Block'].apply(format_street_type)\n",
+    "\n",
+    "# How large is data set now?\n",
+    "print(\"Data dimensions: \")\n",
+    "print(crime_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### TODO: More than one 911 call for same incident; what are criteria for two rows to denote same event?"
+   ]
   }
  ],
  "metadata": {
