--- a/Philadelphia_Crime_Data.ipynb
+++ b/Philadelphia_Crime_Data.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "# Look at some distinct data (TODO: Pretty print)\n",
+    "# Look at some distinct data\n",
     "dc_dist_distinct = crime_data.groupby('Dc_Dist')['Dc_Dist'].count()\n",
     "print(dc_dist_distinct)\n",
     "print(\"\\n\")\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -439,13 +439,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "\n",
-    "# TODO: Is it possible to apply?  There are two columns involved here!\n",
     "def ensure_data_time_consistency(data_frame):\n",
     "    ''' Checks all date/time fields to be sure there is a match\n",
     "        Updates the date/time fields if not a match!\n",
@@ -453,15 +452,12 @@
     "    '''\n",
     "    # Loop over each row\n",
     "    for tup in data_frame.itertuples():\n",
-    "        # Record index\n",
-    "        this_index = tup.Index\n",
-    "        \n",
     "        # Get Dispatch_Date_Time\n",
     "        full_date_time = datetime.strptime(tup.Dispatch_Date_Time, \"%Y-%m-%d %H:%M:%S\")\n",
     "        \n",
     "        # Check Hour\n",
     "        if (tup.Hour != full_date_time.hour):\n",
-    "            data_frame.loc[this_index, 'Hour'] = full_date_time.hour\n",
+    "            data_frame.loc[tup.Index, 'Hour'] = full_date_time.hour\n",
     "            \n",
     "# Ensure the dates and times match in each row\n",
     "ensure_data_time_consistency(crime_data)"
@@ -478,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -491,6 +487,8 @@
     }
    ],
    "source": [
+    "import re\n",
+    "\n",
     "# Regular expressions\n",
     "block_re = '^(\\d+)(\\s)BLOCK(\\s)(.+)(\\s)(\\w+)$'\n",
     "block_missed_re = '^(\\d+)(\\s)(.+)(\\s)(\\w+)$'\n",
