--- a/Philadelphia_Crime_Data.ipynb
+++ b/Philadelphia_Crime_Data.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -439,9 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 206,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date Time Cleaning finished!\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -460,7 +468,8 @@
     "            data_frame.loc[tup.Index, 'Hour'] = full_date_time.hour\n",
     "            \n",
     "# Ensure the dates and times match in each row\n",
-    "ensure_data_time_consistency(crime_data)"
+    "ensure_data_time_consistency(crime_data)\n",
+    "print(\"Date Time Cleaning finished!\")"
    ]
   },
   {
@@ -469,12 +478,12 @@
     "collapsed": true
    },
    "source": [
-    "The **Location_Block** field is not consistent so there will be some cleaning needed to ensure the same pattern in the data.  The cleanup code will ensure that the locations are specified as either a block or an intersection.  A block is denoted as _2400 BLOCK FRONT STREET_.  An intersection fits the pattern _RHAWN ST / COTTMAN AV_.  The street types are standarized to ensure consistency as much as practical.  For example, all _ROAD_ street types are changed to _RD_."
+    "The **Location_Block** field is not consistent so there will be some cleaning needed to ensure the same pattern in the data.  The cleanup code will ensure that the locations are specified as either a block or an intersection.  A block is denoted as _2400 BLOCK FRONT STREET_.  An intersection fits the pattern _RHAWN ST / COTTMAN AV_.  The street types are standarized to ensure consistency as much as practical.  For example, all _ROAD_ street types are changed to _RD_.  Rows with empty or invalid locations (such as a single word) are removed from the data set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +510,7 @@
     "def format_location_data(item):\n",
     "    ''' Format data set's location block column (invoked via apply method)\n",
     "        item = one item from location block column\n",
-    "    '''\n",
+    "    '''  \n",
     "    # Initial trimming\n",
     "    item = item.strip()\n",
     "    \n",
@@ -522,6 +531,7 @@
     "    # BLOCK and SLASH patterns accepted at this stage\n",
     "    if (re.fullmatch(block_re, item) or re.fullmatch(int_slash_re, item)):\n",
     "        pass\n",
+    "    \n",
     "    elif (re.fullmatch(street_missed_re, item)):\n",
     "        # Add default street type\n",
     "        item += \" ST\"\n",
@@ -588,7 +598,7 @@
     "    ''' Format street type in data set's location block column (invoked via apply method)\n",
     "        This function is invoked agter format_location_data\n",
     "        item = one item from location block column\n",
-    "    ''' \n",
+    "    '''\n",
     "    # BLOCK pattern\n",
     "    if (re.fullmatch(block_re, item)):\n",
     "        tokens = item.split()\n",
@@ -628,27 +638,30 @@
     "                # Previous part\n",
     "                item = this_part + \" / \"\n",
     "                this_part = \"\"\n",
+    "                \n",
+    "            # Initial trimming\n",
+    "            street_names[i].strip()\n",
     "            \n",
     "            # Split this part\n",
     "            tokens = street_names[i].split()\n",
     "            \n",
     "            # Empty item?\n",
-    "            if (len(tokens) > 0):\n",
+    "            if (len(tokens) == 0):\n",
     "                break\n",
     "        \n",
     "            # Keep first token (for case like STREET RD)\n",
     "            this_part = this_part + tokens[0]\n",
     "            \n",
     "            # Check remaining tokens for street type\n",
-    "            for i in range(1, len(tokens)):\n",
-    "                if (tokens[i] in STREET_TYPE_MAPPING):\n",
-    "                    this_part = this_part + \" \" + STREET_TYPE_MAPPING[tokens[i]]\n",
+    "            for j in range(1, len(tokens)):\n",
+    "                if (tokens[j] in STREET_TYPE_MAPPING):\n",
+    "                    this_part = this_part + \" \" + STREET_TYPE_MAPPING[tokens[j]]\n",
     "                    break\n",
-    "                elif (tokens[i] in STREET_TYPE_EXPECTED):\n",
-    "                    this_part = this_part + \" \" + tokens[i]\n",
+    "                elif (tokens[j] in STREET_TYPE_EXPECTED):\n",
+    "                    this_part = this_part + \" \" + tokens[j]\n",
     "                    break\n",
     "                else:\n",
-    "                    this_part = this_part + \" \" + tokens[i]\n",
+    "                    this_part = this_part + \" \" + tokens[j]\n",
     "            \n",
     "        # Last part\n",
     "        item = item + this_part\n",
@@ -673,7 +686,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### TODO: More than one 911 call for same incident; what are criteria for two rows to denote same event?"
+    "There is one more cleaning step that must take place.  If multiple people placed a 911 call for the same incident, the incident is recorded twice in this data set.  These rows must be combined so that each incident is counted only once regardless of the number of 911 callers.  After removing such duplicates, the number of rows in the data set is about 1.95 million, or 80000 fewer than the previous iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data dimensions: \n",
+      "(1953458, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try groupby to remove duplicates\n",
+    "crime_data = crime_data[['Dispatch_Date_Time', 'Location_Block', 'UCR_General', 'Text_General_Code']].drop_duplicates()\n",
+    "\n",
+    "# Sort data set to better see repeat incidents\n",
+    "crime_data.sort_values(['Dispatch_Date_Time'], ascending=False, inplace=True)\n",
+    "\n",
+    "# How large is data set now?\n",
+    "print(\"Data dimensions: \")\n",
+    "print(crime_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TODO: Data cleaning is finished; plot and analyze data"
    ]
   }
  ],
