--- a/Philadelphia_Crime_Data.ipynb
+++ b/Philadelphia_Crime_Data.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "(3) Has crime improved over time?\n",
     "\n",
-    "I will look at combinations to see how crime varies geographically in Philadelphia?  Perhaps thefts and murders are committed more frequently in different parts of the city."
+    "I will look at combinations to see how crime varies geographically in Philadelphia.  Perhaps thefts and murders are committed more frequently in different parts of the city."
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -432,48 +432,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I checked all corresponding date and time columns to ensure that all values matched the expected pattern.  When I checked all date and time fields to ensure consistency, I noticed that the **Hour** field sometimes does not match the **Dispatch_Date_Time**.  This occurs when the dispatch time is near the top of the hour.  For example, the dispatch date and time could be '2015-11-23 18:59:00'.  The hour may be set to 19.  The code below corrects the hour to 18."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Date Time Cleaning finished!\n"
-     ]
-    }
-   ],
-   "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "def ensure_data_time_consistency(data_frame):\n",
-    "    ''' Checks all date/time fields to be sure there is a match\n",
-    "        Updates the date/time fields if not a match!\n",
-    "        data_frame = data frame to investigate\n",
-    "    '''\n",
-    "    # Loop over each row\n",
-    "    for tup in data_frame.itertuples():\n",
-    "        # Get Dispatch_Date_Time\n",
-    "        full_date_time = datetime.strptime(tup.Dispatch_Date_Time, \"%Y-%m-%d %H:%M:%S\")\n",
-    "        \n",
-    "        # Check Hour\n",
-    "        if (tup.Hour != full_date_time.hour):\n",
-    "            data_frame.loc[tup.Index, 'Hour'] = full_date_time.hour\n",
-    "            \n",
-    "# Ensure the dates and times match in each row\n",
-    "ensure_data_time_consistency(crime_data)\n",
-    "print(\"Date Time Cleaning finished!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -483,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
